[gd_scene load_steps=37 format=2]

[ext_resource path="res://prefab/audio-icon.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://sounds/menu/pop.wav" type="AudioStream" id=3]
[ext_resource path="res://prefab/fullscreen_icon.tscn" type="PackedScene" id=4]
[ext_resource path="res://images/menu/level-select/attestation-filled.png" type="Texture" id=5]
[ext_resource path="res://fonts/font-45.tres" type="DynamicFont" id=6]
[ext_resource path="res://images/spritesheets/girl.png" type="Texture" id=7]
[ext_resource path="res://scripts/level_select.gd" type="Script" id=8]
[ext_resource path="res://fonts/Arial Unicode.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://images/menu/level-select/checkbox-empty.png" type="Texture" id=10]
[ext_resource path="res://images/menu/level-select/signature.png" type="Texture" id=11]
[ext_resource path="res://images/menu/level-select/checkbox-ticked.png" type="Texture" id=12]
[ext_resource path="res://prefab/buttons/level_select.tres" type="StyleBox" id=13]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 7 )
region = Rect2( 0, 150, 50, 50 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 7 )
region = Rect2( 50, 150, 50, 50 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 7 )
region = Rect2( 100, 150, 50, 50 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 7 )
region = Rect2( 150, 150, 50, 50 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=6]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=8]
size = 53
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.823529, 0.215686, 0.215686, 1 )
draw_center = false
border_color = Color( 0.960784, 0, 0, 1 )
corner_detail = 1
shadow_color = Color( 0.470588, 0.470588, 0.470588, 1 )
shadow_size = 33

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="DynamicFont" id=24]
size = 45
outline_size = 5
outline_color = Color( 1, 0.00784314, 0.00784314, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=25]
size = 45
outline_size = 5
outline_color = Color( 0, 0.0627451, 1, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=26]
draw_center = false
shadow_color = Color( 0.415686, 0.415686, 0.415686, 1 )
shadow_size = 33

[sub_resource type="StyleBoxEmpty" id=27]

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="StyleBoxEmpty" id=28]

[node name="level_select" type="Node2D"]
script = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 382.54
margin_top = 91.3446
margin_right = 757.54
margin_bottom = 408.345
rect_scale = Vector2( 1.70336, 1.70336 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audio" type="Node2D" parent="."]
position = Vector2( 763.347, 296.825 )
rotation = -0.00773652
scale = Vector2( 0.306909, 0.311166 )

[node name="pop" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource( 3 )
volume_db = 10.0
bus = "sound_effects"

[node name="icon_settings" type="Node2D" parent="."]

[node name="fullscreen_icon" parent="icon_settings" instance=ExtResource( 4 )]

[node name="audio-icon" parent="icon_settings" instance=ExtResource( 1 )]
scale = Vector2( 1, 1.00358 )

[node name="girl-bg" type="AnimatedSprite" parent="."]
modulate = Color( 0, 0, 0, 0.870588 )
position = Vector2( 245, 410.412 )
scale = Vector2( 3.68378, 3.68378 )
frames = SubResource( 5 )
frame = 3
speed_scale = 0.5
playing = true

[node name="girl" type="AnimatedSprite" parent="."]
position = Vector2( 170, 370 )
scale = Vector2( 3.11326, 3.11326 )
frames = SubResource( 5 )
speed_scale = 0.5
playing = true

[node name="attestation-filled" type="Sprite" parent="."]
visible = false
position = Vector2( 718.19, 285.755 )
scale = Vector2( 0.212596, 0.212596 )
texture = ExtResource( 5 )

[node name="form" type="Node2D" parent="."]

[node name="french" type="Node2D" parent="form"]
visible = false

[node name="title_attestation" type="RichTextLabel" parent="form/french"]
margin_left = 348.922
margin_top = 119.903
margin_right = 1065.92
margin_bottom = 283.903
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center] ATTESTATION DE DÉPLACEMENT
DÉROGATOIRE"
text = " ATTESTATION DE DÉPLACEMENT
DÉROGATOIRE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="groceries_text" type="RichTextLabel" parent="form/french"]
margin_left = 465.484
margin_top = 249.929
margin_right = 985.484
margin_bottom = 405.929
custom_fonts/normal_font = SubResource( 7 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Déplacements pour effectuer des achats de fournitures nécessaires à l’activité professionnelle et des achats de première nécessité dans des établissements dont les activités demeurent autorisées."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_sport" type="RichTextLabel" parent="form/french"]
margin_left = 467.0
margin_top = 377.0
margin_right = 987.0
margin_bottom = 533.0
custom_fonts/normal_font = SubResource( 7 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Déplacements brefs, dans la limite d'une heure quotidienne et dans un rayon maximal d'un kilomètre autour du domicile, liés soit à l'activité physique individuelle des personnes, à l'exclusion de toute pratique sportive collective et de toute proximité avec d'autres personnes, soit à la promenade avec les seules personnes regroupées dans un même domicile, soit aux besoins des animaux de compagnie."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="select_text" type="RichTextLabel" parent="form/french"]
margin_left = 26.0
margin_top = 12.0
margin_right = 411.0
margin_bottom = 332.0
custom_fonts/normal_font = SubResource( 8 )
custom_colors/font_color_shadow = Color( 0.215686, 0.215686, 0.215686, 1 )
custom_constants/shadow_offset_x = 11
custom_constants/shadow_offset_y = 11
text = "Ton déplacement est lié à quel motif?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="english" type="Node2D" parent="form"]

[node name="title_attestation" type="RichTextLabel" parent="form/english"]
margin_left = 348.922
margin_top = 119.903
margin_right = 1065.92
margin_bottom = 283.903
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center] ATTESTATION DE DÉPLACEMENT
DÉROGATOIRE
"
text = " ATTESTATION DE DÉPLACEMENT
DÉROGATOIRE
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="groceries_text" type="RichTextLabel" parent="form/english"]
margin_left = 465.484
margin_top = 249.929
margin_right = 985.484
margin_bottom = 405.929
custom_fonts/normal_font = SubResource( 7 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Travels to carry out purchases of goods necessary for a professional activity or essential goods in facilities practicing activities which remain authorized. 
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_sport" type="RichTextLabel" parent="form/english"]
margin_left = 467.0
margin_top = 377.0
margin_right = 987.0
margin_bottom = 533.0
custom_fonts/normal_font = SubResource( 7 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Short travels, not lasting more than one hour per day and within a one kilometre distance from home, either for the purpose of an individual physical activity, with the exclusion of all group activities and any proximity to other individuals, or for the purpose of a walk only with the people belonging to the same household, or for the needs of pets. 
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="select_text" type="RichTextLabel" parent="form/english"]
margin_left = 25.2209
margin_top = 12.5266
margin_right = 514.221
margin_bottom = 279.527
custom_fonts/normal_font = SubResource( 8 )
custom_colors/font_color_shadow = Color( 0.215686, 0.215686, 0.215686, 1 )
custom_constants/shadow_offset_x = 11
custom_constants/shadow_offset_y = 11
text = "Select your reason for leaving the house:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="signature_text" type="RichTextLabel" parent="form"]
margin_left = 646.0
margin_top = 549.0
margin_right = 983.0
margin_bottom = 595.0
custom_fonts/normal_font = SubResource( 7 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Signature:  _____________"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="signature" type="Sprite" parent="form"]
visible = false
position = Vector2( 803.306, 565.325 )
scale = Vector2( 0.459288, 0.459288 )
texture = ExtResource( 11 )

[node name="option_groceries" type="Node2D" parent="form"]

[node name="checkbox_emptty" type="Sprite" parent="form/option_groceries"]
position = Vector2( 420.805, 279.238 )
scale = Vector2( 0.303446, 0.303446 )
texture = ExtResource( 10 )

[node name="checkbox_checked" type="Sprite" parent="form/option_groceries"]
visible = false
position = Vector2( 420.91, 279.234 )
scale = Vector2( 0.303446, 0.303446 )
texture = ExtResource( 12 )

[node name="option_sport" type="Node2D" parent="form"]

[node name="checkbox_empty" type="Sprite" parent="form/option_sport"]
position = Vector2( 420.805, 439.238 )
scale = Vector2( 0.303446, 0.303446 )
texture = ExtResource( 10 )

[node name="checkbox_checked" type="Sprite" parent="form/option_sport"]
visible = false
position = Vector2( 420.91, 439.235 )
scale = Vector2( 0.303446, 0.303446 )
texture = ExtResource( 12 )

[node name="buttons" type="Node2D" parent="."]

[node name="groceries" type="Button" parent="buttons"]
margin_left = 387.0
margin_top = 228.496
margin_right = 1009.0
margin_bottom = 335.496
custom_styles/hover = ExtResource( 13 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sport" type="Button" parent="buttons"]
margin_left = 398.0
margin_top = 377.0
margin_right = 1008.0
margin_bottom = 524.0
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/focus = SubResource( 15 )
custom_styles/disabled = SubResource( 16 )
custom_styles/normal = SubResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="language" type="Node2D" parent="."]
position = Vector2( 333.173, 13.614 )
scale = Vector2( 0.66941, 0.66941 )

[node name="language" type="RichTextLabel" parent="language"]
margin_left = 526.843
margin_top = 23.765
margin_right = 1073.84
margin_bottom = 68.765
custom_fonts/normal_font = ExtResource( 6 )
text = "LANGUAGE:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="english" type="RichTextLabel" parent="language"]
visible = false
margin_left = 766.408
margin_top = 24.0
margin_right = 968.408
margin_bottom = 69.0
custom_fonts/normal_font = SubResource( 24 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "ENGLISH"
text = "ENGLISH"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="french" type="RichTextLabel" parent="language"]
margin_left = 769.0
margin_top = 24.0
margin_right = 998.0
margin_bottom = 69.0
custom_fonts/normal_font = SubResource( 25 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "FRANÇAIS"
text = "FRANÇAIS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="language_button" type="Button" parent="language"]
margin_left = 512.972
margin_top = 3.58749
margin_right = 989.972
margin_bottom = 89.5875
custom_styles/hover = SubResource( 26 )
custom_styles/pressed = SubResource( 27 )
custom_styles/focus = SubResource( 22 )
custom_styles/normal = SubResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="buttons/groceries" to="." method="_on_groceries_button_down"]
[connection signal="button_down" from="buttons/sport" to="." method="_on_sport_button_down"]
[connection signal="button_down" from="language/language_button" to="." method="_on_language_button_down"]
